# multiple_lights_demo

./: Cargo.toml  README.md  build.rs
shaders/: light_casters.frag.glsl  light_casters.vert.glsl  lighting_cube.frag.glsl  lighting_cube.vert.glsl  lighting_map.frag.glsl  lighting_map.vert.glsl  multiple_lights.frag.glsl  multiple_lights.vert.glsl
src/: backend.rs  camera.rs  light.rs  lighting_map.rs  main.rs  material.rs  texture.rs
